--- a/social2012/tex/nodeTopology_social2012.tex
+++ b/social2012/tex/nodeTopology_social2012.tex
@@ -1,34 +1,14 @@
 \documentclass{article}
 \usepackage{nips12submit_e,times}
-%\documentclass[10pt,twocolumn,fleqn]{article}
-%\setlength{\columnsep}{0.25in}
-%\usepackage{fullpage}
-%\usepackage[margin=0.70in]{geometry}
 
 \usepackage[square,numbers]{natbib}
-\usepackage{amsmath, epsfig}
-\usepackage{amsfonts}
-\usepackage{graphicx}
-\usepackage{amsfonts}
-\usepackage{algorithm}
-\usepackage{algorithmic}
-\usepackage{easybmat}
-\usepackage{footmisc}
-\usepackage[usenames,dvipsnames]{color}
-\usepackage{subfig}
-\usepackage{hyperref}
-\renewcommand\algorithmiccomment[1]{// \textit{#1}}
-\newcommand{\ignore}[1]{}
-\newcommand{\comment}[1]{}
-\newcommand{\willie}[1]{\textcolor{red}{\textsf{\emph{\textbf{\textcolor{red}{#1}}}}}}
-\DeclareMathOperator*{\argmax}{arg\,max}
-\newcommand{\norm}[1]{\left|\left|#1\right|\right|}
+\usepackage{amsmath,amsthm,amssymb,amsfonts,MnSymbol,epsfig,graphicx,algorithm,algorithmic}
 
 \title{Embedding Nodes via their Local Network Topology for Role Descriptors in Social Networks}
 %\title{Embedding Graph Vertices via Local Network Topology for Identifying Role-Types in Social Networks}
 
 \author{
-Willie Neiswanger\thanks{Anything here?} \\
+Willie Neiswanger\\
 School of Computer Science\\
 Carnegie Mellon University\\
 Pittsburgh, PA 15213 \\
@@ -38,50 +18,51 @@ Pittsburgh, PA 15213 \\
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
 
-%\nipsfinalcopy % Uncomment for camera-ready version
+\nipsfinalcopy % Uncomment for camera-ready version
 
 \begin{document}
 
 \maketitle
 
 \begin{abstract}
-This paper proposes a method for characterizing the local network topology in the vicinity of each vertex in a graph. The method provides a Euclidean embedding of each node based on its local network structure. We show how descriptors of the local topologies of vertices can be used to quantify the types of local structure found in a network and identify groups of nodes with similar roles relative to nearby vertices. Our method for embedding makes use of the Fixed Node Edit Distance (FNED), a distance metric between the local topologies around nodes, which we define. We give multiple algorithms for computing the FNED given different graph structures, show how it can be used for embedding the local topologies of nodes in Euclidean space, and demonstrate the embedding on multiple publicly available network datasets. Results show the ability of this method to characterize diverse regions of network structure and identify groups of entities with similar roles in social networks.
+This paper proposes a method for characterizing the local network topology in the vicinity of each vertex in a graph. The method provides a Euclidean embedding of each node based on its surrounding network structure. We show how descriptors of the local topologies of vertices can be used to quantify the types of local structure found in a network and identify groups of nodes that play similar roles in relation to their surroundings. Our method for embedding makes use of the Fixed Node Edit Distance (FNED), a distance metric between the local topologies around nodes, which we define. We give multiple algorithms for computing the FNED given different graph structures, show how it can be used for embedding the local topologies of nodes in Euclidean space, and demonstrate the embedding on multiple publicly available network datasets. Results show the ability of this method to characterize diverse regions of network structure and identify groups of entities with similar roles in social networks.
 \end{abstract}
 
 
 \section{Introduction}
 \label{sec:intro}
+A great deal of information can be gleaned from the edge structure surrounding the nodes in a network. [The edge structure in the vicinity of a node in a network has the potential to provide information, possible useful information, about the character of the node, or about the role it plays in relation to adjacent nodes.]
+For example, in the context of social networks, the local topology around a person includes connections to friends, as well as the interconnections between friends or between friends of friends. The local network structure will depend both on the qualities of the person (such as friendliness), as well as on the nature of the friend group in which the person resides.
+This idea can be extended beyond social networks to realms such as spam detection on the web 
+[Websites have diverse local topologies based on their role in the web ecosystem.]
+
+Node degree can be viewed as a simple descriptor of local topology. However, it does not capture the potentially complex relations among the immediate neighbors of a node, nor does it incorporate information about the edge structure greater than one step away. Additionally, as the degree of a node grows, so does the number of possible types of relations among its neighbors. In order to capture the increasing complexity of the local topology, we desire a richer descriptor of the local edge structure that is able to encode the local topology as its complexity scales with node degree.
+
+To this end, we develop a method for embedding nodes in Euclidean space based on local network structure (note that a map from each node into $\mathbb{R}^{k}$ can be viewed as a $k$-dimensional descriptor of the local topology). In this paper, we devise a way to accomplish this embedding through the use of a metric that gives a distance between subgraphs of a network. The subgraphs capture local network structure, and the metric allows a $k$-dimensional descriptor to be constructed for each node by finding its distance to a set of other nodes. After defining this metric and providing algorithms for its computation, we demonstrate the method on a number of network datasets and show its ability to find groups of nodes that [have similar local structure][play similar roles in relation to their neighbors].
+
 
 \section{Definitions}
 \label{sec:defs}
 
-
 \subsection{$k$-Step Local Topology of a Node}
-Let $G = \{V,E\}$ be a graph with a set of vertices $V$ and edges $E$. We would like to capture the network topology around a given node in the graph. We define the $k$-step local topology around a node $n$ as follows: let $G' = \{ V',E' \}$ be the subgraph of $G$ traversed in $k$ steps of breadth-first search starting from $n$ (where the zeroth step yields $V' = \{ n \}$, the first step yields $V' = \{ n \} \cup \{ \text{all nodes adjacent to } n \} $, and so on). Let $ \text{\emph{\~{E}}} = E' \cup \{\text{all edges between any two nodes in } V' \}$. Then we define
+Let $G = \{V,E\}$ be a graph with a set of vertices $V$ and edges $E$. We would like to capture the network topology around a given node in the graph. We define the $k$-step local topology around a node $n$ as follows: let $G' = \{ V',E' \}$ be the subgraph of $G$ traversed in $k$ steps of breadth-first search starting from $n$ (where the zeroth step yields $V' = \{ n \}$, the first step yields $V' = \{ n \} \cup \{ \text{all nodes adjacent to } n \} $, and so on). Let $ \text{\emph{\~{E}}} = E' \cup \{\text{all edges between any two nodes in } V' \}$. Then we define the $k$-step local topology $T_{k}(n)$ to be
 \begin{equation}
 T_{k}(n) = \{ V, \emph{\text{\~{E}}} \}
 \end{equation}
-We illustrate the $k$-step local topology around nodes in a graph in Figure~\ref{fig:localTopology}.
-\begin{figure*}[!]
+Hence $T_{k}(n)$ is a subgraph of G containing node $n$. We illustrate the $k$-step local topology in Figure~\ref{fig:localTopology}, which shows the $1$-step and $2$-step local topologies around two nodes in a graph.
+\begin{figure*}[h!tbp]
   \centering               
-  \includegraphics[width=1\textwidth]{../img/fnedRelated/localTopologyFigure.pdf}
-  \caption{Illustration showing the 1-step and 2-step local topologies of two nodes in an undirected graph.}
+  \includegraphics[width=0.8\textwidth]{fig/fig1.pdf}
+  \caption{Illustration of the 1-step and 2-step local topologies for two nodes in an undirected graph.}
   \label{fig:localTopology}
 \end{figure*}
 
-
 \subsection{Fixed Node Edit Distance (FNED)}
+Our first step towards embedding involves defining a distance between the local topologies of nodes; we describe how the distances between nodes can be used for Euclidean embedding in Section~\ref{sec:algos}. The concept of edit distance has been shown to provide an intuitive way to represent distances between abstract structures \cite{riesen2009approximate,reis2004automatic,gao2010survey}. We aim to define an edit distance between the local topologies around nodes in a graph. We call this the Fixed Node Edit Distance (FNED), and define it to be the minimum number of edge insertions or deletions to transform the local topology around one node into the local topology around another node.
 
-Our first step towards embedding involves defining a distance between the local topologies of nodes; we describe how the distances between nodes can be used for Euclidean embedding in Section~\ref{sec:algos}. The concept of edit distance has been shown to provide an intuitive way to represent distances between abstract structures \cite{riesen2009approximate,reis2004automatic,gao2010survey}. We aim to define an edit distance between the local topologies around nodes in a graph. We call this the Fixed Node Edit Distance (FNED), and define it to be the minimum number of edge insertions (between nodes) or deletions to transform the local topology around one node into the local topology around another node.
+An equivalent definition of the FNED, which we refer to as the mapping-overlap formulation, allows for easier computation. Intuitively, for a given mapping between the nodes of a pair of local topologies, we can find the number of edges that ``do not overlap" (i.e. given the mapping, the number of node-pairs that are adjacent in one of the two local topologies but not adjacent in the other). The mapping that yields the minimum number of non-overlapping edges is equivalent to the FNED defined previously.
 
-An equivalent definition of the FNED, which we refer to as the mapping-overlap formulation, allows for easier computation. Intuitively, for a given mapping between the nodes of a pair of local topologies, we can find the number of edges that ``do not overlap" (i.e. given the mapping, the number of node-pairs that are adjacent in one of the two local topologies but not adjacent in the other). The mapping that yields the minimum number of non-overlapping edges is equivalent to the FNED defined previously (proof omitted).
-
-For a graph $G = \{V,E\}$, let $\Omega_{V}$ be the set of bijections from $V$ to itself (i.e. the set of permutations of $V$). Additionally, let $\Omega_{V, a\rightarrow b}$ be $\Omega_{V}$ restricted to bijections where node $a\in V$ is mapped to node $b\in V$. For all vertices $a,b \in V$, we define the FNED between $a$ and $b$ (given $k$-step local topologies denoted $T_{k}(a)$ and $T_{k}(b)$, respectively), to be
-% \begin{equation}
-% \begin{split}
-% \text{FNED}_{k}(a,b) &= \\ \text{min} & \big|_{m \in \Omega_{V, a\rightarrow b}} d(T_{k}(a), T_{k}(b), m)
-% \end{split}
-% \end{equation}
+Formally, for a graph $G = \{V,E\}$, let $\Omega_{V}$ be the set of bijections from $V$ to itself (i.e. the set of permutations of $V$). Additionally, let $\Omega_{V, a\rightarrow b}$ be $\Omega_{V}$ restricted to bijections where node $a\in V$ is mapped to node $b\in V$. For all vertices $a,b \in V$, we define the FNED between $a$ and $b$ (given the two $k$-step local topologies $T_{k}(a)$ and $T_{k}(b)$), to be
 \begin{equation}
 \text{FNED}_{k}(a,b) = \text{min} \big|_{m \in \Omega_{V, a\rightarrow b}} d(T_{k}(a), T_{k}(b), m)
 \end{equation}
@@ -90,7 +71,6 @@ where
 \begin{split}
 d(T_{k}(a), & T_{k}(b), m) = \\ 
 & \sum_{i=1}^{n} \sum_{j=i}^{n} \Big[ A_{T_{k}(a)}(m(i),m(j)) \oplus A_{T_{k}(b)}(i,j)  \Big]
-% & \sum_{i=1}^{n} \sum_{j=i}^{n} A_{T_{k}(a)}(m(i),m(j)) \oplus A_{T_{k}(b)}(i,j)
 \end{split}
 \end{equation}
 where $A_{G}$ denotes the adjacency matrix of graph G. Given adjacency matrices $A_{G_{1}}$ and $A_{G_{2}}$, both of size $n \times n$, we define the XOR operator $\oplus$ to be
@@ -105,28 +85,22 @@ We illustrate the two definitions of the FNED and show an example of the distanc
 
 This project is currently concerned only with undirected graphs, with future plans to extend it to directed and other labelled graphs. 
 
-
-\begin{figure*}[!]
+\begin{figure*}[h!tbp]
   \centering               
-  \includegraphics[width=1\textwidth]{../img/fnedRelated/fnedFigure.pdf}
+  \includegraphics[width=0.8\textwidth]{fig/fig2.pdf}
   \caption{Illustration of the FNED between two local topologies. (i) shows the FNED viewed as a sequence of edge edits, while (ii) shows an equivalent definition of the FNED (the mapping-overlap formulation) as a collection of edges that ``do not overlap'' for a given mapping.}
   \label{fig:fnedFigure}
 \end{figure*}
-
-
 
 
 \section{Algorithms for Embedding}
 \label{sec:algos}
 The algorithms in this section describe the process of embedding the nodes of a graph in Euclidean space based on their local topologies.
 
-
-
 \subsection{Overview for Embedding Nodes}
-
 Algorithm~\ref{alg:overviewEmbedding} gives an overview of the process of embedding in Euclidean space each node in a graph, based on its local topology.
 
-\begin{algorithm}[!]
+\begin{algorithm}[h!tbp]
 \caption{Node Embedding via Local Topologies}
 \label{alg:overviewEmbedding}
 \begin{algorithmic}[1]
@@ -146,7 +120,7 @@ The embedding into Euclidean space is wholly dependent upon computation of the F
 \subsection{Deterministic FNED for Trees}
 
 In Algorithm~\ref{alg:trueFnedTrees} we give a polynomial time algorithm for computing the FNED between nodes in a tree for 2-step local topologies.
-\begin{algorithm}[!]
+\begin{algorithm}[h!tbp]
 \caption{Deterministic FNED for Trees}
 \label{alg:trueFnedTrees}
 \begin{algorithmic}[1]
@@ -195,14 +169,14 @@ In Algorithm~\ref{alg:trueFnedTrees} we give a polynomial time algorithm for com
 
 \subsection{Approximate FNED for Arbitrary Graphs}
 
-Finding an optimal graph matching is not possible in polynomial time for arbitrary graphs. In this section we provide a Markov Chain Monte Carlo (MCMC) -based algorithm to search the combinatorial space of mappings between the nodes of two local topologies. The algorithm follows a directed random walk through the space of permutations of nodes in a local topology.
+Finding an optimal graph matching is not possible in polynomial time for arbitrary graphs. In this section we provide a Markov Chain Monte Carlo (MCMC)-based algorithm to search the combinatorial space of mappings between the nodes of two local topologies. The algorithm follows a directed random walk through the space of permutations of nodes in a local topology.
 
 % \subsubsection{Tree Based Heuristic}
 
-\subsubsection{MCMC for FNED Computation}
-Here, we formulate computation of the FNED between nodes as a stochastic combinatorial optimization problem. In Algorithm~~\ref{alg:fnedMcmc} we describe an MCMC algorithm similar to Metropolis-Hastings for sampling the FNED between two nodes in an arbitrary graph.
+\subsubsection{MCMC for Computing the FNED}
+Here, we formulate computation of the FNED between nodes as a stochastic combinatorial optimization problem. In Algorithm~\ref{alg:fnedMcmc} we describe an MCMC algorithm similar to Metropolis-Hastings for sampling the FNED between two nodes in an arbitrary graph.
 
-\begin{algorithm}[!]
+\begin{algorithm}[h!tbp]
 \caption{MCMC for FNED in Arbitrary Graphs}
 \label{alg:fnedMcmc}
 \begin{algorithmic}[1]
@@ -241,9 +215,9 @@ Here, we formulate computation of the FNED between nodes as a stochastic combina
 \subsection{Graph Clustering with Local Topologies in a Dolphin Social Network}
 
 The dataset in this experiment consists of a social network between a collection of 62 dolphins \cite{bottleNoseDolphinPeople}. An edge was assigned between two dolphins if researchers spotted them traveling in the same group.
-\begin{figure*}[!]
+\begin{figure*}[h!tbp]
   \centering               
-  \includegraphics[width=1\textwidth]{../img/demo5_dolphinSocialNetwork/dolphinFigure.pdf}
+  \includegraphics[width=1\textwidth]{fig/fig3.pdf}
   \caption{A dolphin social network is shown. The axes denote the first two principal components of the Euclidean embedding of the nodes (i.e. dolphins). Clustering the dolphins (using the $k$-means algorithm) yields three main types of local topologies in this social network, which we can view as clusters of dolphin social behavior. The dolphin's names are shown, as are the edges in the network, and the marker color in both plots denotes each dolphin's cluster assignment.}
   \label{fig:dolphinSocialNetwork}
 \end{figure*}
@@ -257,9 +231,9 @@ The dataset in this experiment consists of the 60 most common nouns and adjectiv
 
 In this experiment, we hope to show that the embedding method described in this paper yields features that could be used to benefit a supervised machine learning problem; if so, Euclidean local topology features could be added to the features of datasets that are equipped with information about relationships between data elements. In particular, we hope to see some sort of differentiation between the embedding of adjectives and the embedding of the nouns in this dataset.
 
-\begin{figure*}[!]
+\begin{figure*}[h!tbp]
   \centering               
-  \includegraphics[width=1\textwidth]{../img/demo6_dickensCopperfield/dickensFigure.pdf}
+  \includegraphics[width=1\textwidth]{fig/fig4.pdf}
   \caption{The 60 most common adjectives and nouns in Dickens' David Copperfield. Red markers denote adjectives and blue markers denote nouns. Words of different types tend to be embedded in different positions in space.}
   \label{fig:dickensCopperfield}
 \end{figure*}
@@ -273,9 +247,9 @@ The datset in this experiment consists of the ``matchups'' between 115 college f
 
 Similar to the previous experiment, we hope to show that the embedding method described in this paper yields features that could be used to benefit a supervised machine learning problem; in particular, we hope to see an embedding that places teams with similar matchup topologies near each other in space. We would guess that teams residing in the same league have similar matchup topologies.
 
-\begin{figure*}[!]
+\begin{figure*}[h!tbp]
   \centering               
-  \includegraphics[width=1\textwidth]{../img/demo7_footballTeams/footballFigure.pdf}
+  \includegraphics[width=1\textwidth]{fig/fig5.pdf}
   \caption{A network of college football team matchups during a given season is shown. Markers are colored based on the league (out of 12) in which the associated team resides. Teams belonging to the same league tend to be embedded similarly, as do teams from similar geographic locations.}
   \label{fig:footballTeams}
 \end{figure*}
